api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: market-demo
  creationTimestamp: null
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api  
    spec:
      containers:
        - image: huitingyeong/market-api:latest
          imagePullPolicy: Always
          name: api
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
