web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: market-demo
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web  
    spec:
      containers:
        - env:
            - name: REACT_APP_API_URL
              value: http://34.36.136.80
          image: huitingyeong/market-frontend:5
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
