api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: market-demo
  creationTimestamp: null
  labels:
    app: api
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
  selector:
    app: api
  type: NodePort
status:
  loadBalancer: {}
