web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: market-demo
  creationTimestamp: null
  labels:
    app: web
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: web
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  allocateLoadBalancerNodePorts: true
  internalTrafficPolicy: Cluster
status:
  loadBalancer: {}
